--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Card Component</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@400;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="card">
-            <img class="card-img" src="img/tech.jpg" alt="an iphone on a macbook with dramatic lighting" />
+            <img class="card-img" src="img/tech.jpg" alt="an iphone on a macbook with dramatic lighting">
             <div class="card-content">
-                <h2 class="card-title"></h2>
-                <p class="card-body"></p>
+                <h2 class="card-title">7 tech tips and tricks that you need to know</h2>
+                <p class="card-body">Using these 7 proven tips from experts in the industry, you can save time, money and more!</p>
                 <div class="card-footer">
                     <p class="card-read-time"><span>15</span> minute read</p>
-                    <a href="" class="card-btn">read more</a>
+                    <a href="#" class="card-btn">read more</a>
                 </div>
             </div>
         </div>
